# Alive_10_Years

./: CMakeLists.txt  README.md  big_q.cpp  big_q_MCS.cpp  bingo.cpp  breaking_sticks.cpp  breaking_sticks_MCS.cpp  challenge1.cpp  challenge10.cpp  challenge11_MCS.cpp  challenge1_MCS.cpp  challenge3.cpp  challenge4.cpp  challenge5.cpp  challenge6.cpp  challenge7.cpp  challenge8.cpp  challenge8_MCS.cpp  challenge9.cpp  dreidel.cpp  dreidel_mcs.cpp  holly.cpp  liars.cpp  newton1.cpp  newton1_MCS.cpp  newton2.cpp  newton2_MCS.cpp  newton3.cpp  ping_pong.cpp  square_dist_adjacent.cpp  square_dist_interior.cpp  square_dist_opposite.cpp  squash.cpp  twins.cpp
