cmake_minimum_required(VERSION 3.7)
project(Alive_10_Years)

set(CMAKE_CXX_STANDARD 14)

add_executable(DREIDEL dreidel.cpp)
add_executable(BREAKING_STICKS breaking_sticks.cpp)
add_executable(TWINS twins.cpp)
add_executable(NEWTON_1 newton1.cpp)
add_executable(NEWTON_2 newton2.cpp)
add_executable(NEWTON_3 newton3.cpp)
add_executable(BIG_Q big_q.cpp)
add_executable(BINGO bingo.cpp)
add_executable(PING_PONG ping_pong.cpp)
add_executable(SQUASH squash.cpp)
add_executable(LIARS liars.cpp)
add_executable(CHALLENGE1 challenge1.cpp)
add_executable(CHALLENGE3 challenge3.cpp)
add_executable(CHALLENGE4 challenge4.cpp)
add_executable(CHALLENGE5 challenge5.cpp)
add_executable(CHALLENGE6 challenge6.cpp)
add_executable(CHALLENGE7 challenge7.cpp)
add_executable(CHALLENGE8 challenge8.cpp)
add_executable(CHALLENGE9 challenge9.cpp)
add_executable(CHALLENGE10 challenge10.cpp)
add_executable(SQUARE_DIST_ADJACENT square_dist_adjacent.cpp)
add_executable(SQUARE_DIST_OPPOSITE square_dist_opposite.cpp)
add_executable(SQUARE_DIST_INTERIOR square_dist_interior.cpp)
